fetch wind and solar forecasts in CA_ON (#7895)
* fetch wind and solar forecasts

includes snapshot test
includes mock files for test
includes snapshot from test

* include consumption forecast parser

build consumption forecast parser
include snapshot test
update snapshot
update config file in CA_ON

* update CA_ON.py

Changes applied to fetch_consumption_forecast and fetch_wind_solar_forecasts.
Fetch data for 7 days ahead

* update format

---------

Co-authored-by: Viktor Andersson <30777521+VIKTORVAV99@users.noreply.github.com>

--- a/config/zones/CA-ON.yaml
+++ b/config/zones/CA-ON.yaml
@@ -44,6 +44,7 @@ contributors:
   - felixvanoost
   - misterclean
   - christopheradlam
+  - alejandranavcas
 country: CA
 delays:
   production: 6
@@ -336,6 +337,8 @@ parsers:
   price: CA_ON.fetch_price
   production: CA_ON.fetch_production
   productionCapacity: CA_ON.fetch_production_capacity
+  consumptionForecast: CA_ON.fetch_consumption_forecast
+  productionPerModeForecast: CA_ON.fetch_wind_solar_forecasts
 region: Americas
 sources:
   ? "Mallia, E., Lewis, G. \"Life cycle greenhouse gas emissions of electricity generation\
