--- a/config/zones/US-NE-ISNE.yaml
+++ b/config/zones/US-NE-ISNE.yaml
@@ -107,6 +107,12 @@ capacity:
     - datetime: '2024-11-01'
       source: EIA.gov
       value: 393.4
+    - datetime: '2025-01-01'
+      source: EIA.gov
+      value: 389.9
+    - datetime: '2025-02-01'
+      source: EIA.gov
+      value: 403.0
   biomass:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -188,6 +194,12 @@ capacity:
     - datetime: '2024-07-01'
       source: EIA.gov
       value: 16370.4
+    - datetime: '2025-01-01'
+      source: EIA.gov
+      value: 16286.1
+    - datetime: '2025-02-01'
+      source: EIA.gov
+      value: 16699.0
   geothermal:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -208,6 +220,9 @@ capacity:
     - datetime: '2024-01-01'
       source: EIA.gov
       value: 1895.7
+    - datetime: '2025-01-01'
+      source: EIA.gov
+      value: 1896.1
   hydro storage:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -218,6 +233,9 @@ capacity:
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 1532.0
+    - datetime: '2025-02-01'
+      source: EIA.gov
+      value: 1865.0
   nuclear:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -253,6 +271,12 @@ capacity:
     - datetime: '2024-01-01'
       source: EIA.gov
       value: 6121.6
+    - datetime: '2025-01-01'
+      source: EIA.gov
+      value: 6122.4
+    - datetime: '2025-02-01'
+      source: EIA.gov
+      value: 5708.4
   solar:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -392,6 +416,12 @@ capacity:
     - datetime: '2024-12-01'
       source: EIA.gov
       value: 3170.7
+    - datetime: '2025-01-01'
+      source: EIA.gov
+      value: 3214.3
+    - datetime: '2025-02-01'
+      source: EIA.gov
+      value: 3407.0
   unknown:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -409,6 +439,9 @@ capacity:
     - datetime: '2022-10-01'
       source: EIA.gov
       value: 1538.2
+    - datetime: '2025-02-01'
+      source: EIA.gov
+      value: 1664.2
 comment: Iso New England Inc.
 contributors:
   - systemcatch
