--- a/config/zones/US-SW-PNM.yaml
+++ b/config/zones/US-SW-PNM.yaml
@@ -23,6 +23,9 @@ capacity:
     - datetime: '2024-10-01'
       source: EIA.gov
       value: 338.0
+    - datetime: '2025-01-01'
+      source: EIA.gov
+      value: 638.0
   biomass:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -122,6 +125,9 @@ capacity:
     - datetime: '2024-11-01'
       source: EIA.gov
       value: 2084.0
+    - datetime: '2025-01-01'
+      source: EIA.gov
+      value: 1784.0
   unknown:
     - datetime: '2021-01-01'
       source: EIA.gov
