--- a/config/zones/US-FLA-TEC.yaml
+++ b/config/zones/US-FLA-TEC.yaml
@@ -11,6 +11,9 @@ capacity:
     - datetime: '2022-01-01'
       source: EIA.gov
       value: 12.6
+    - datetime: '2025-02-01'
+      source: EIA.gov
+      value: 27.6
   biomass:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -25,6 +28,9 @@ capacity:
     - datetime: '2022-01-01'
       source: EIA.gov
       value: 486.0
+    - datetime: '2025-02-01'
+      source: EIA.gov
+      value: 0.0
   gas:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -41,6 +47,12 @@ capacity:
     - datetime: '2023-04-01'
       source: EIA.gov
       value: 6324.9
+    - datetime: '2025-01-01'
+      source: EIA.gov
+      value: 6219.7
+    - datetime: '2025-02-01'
+      source: EIA.gov
+      value: 6743.3
   geothermal:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -96,6 +108,9 @@ capacity:
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 325.3
+    - datetime: '2025-01-01'
+      source: EIA.gov
+      value: 317.8
   wind:
     - datetime: '2021-01-01'
       source: EIA.gov
