--- a/config/zones/US-MIDW-AECI.yaml
+++ b/config/zones/US-MIDW-AECI.yaml
@@ -61,6 +61,9 @@ capacity:
     - datetime: '2021-01-01'
       source: EIA.gov
       value: 941.4
+    - datetime: '2025-01-01'
+      source: EIA.gov
+      value: 959.4
 comment: Associated Electric Cooperative, Inc.
 contributors:
   - systemcatch
