--- a/config/zones/US-NW-BPAT.yaml
+++ b/config/zones/US-NW-BPAT.yaml
@@ -33,6 +33,9 @@ capacity:
     - datetime: '2023-10-01'
       source: EIA.gov
       value: 293.6
+    - datetime: '2025-01-01'
+      source: EIA.gov
+      value: 281.0
   coal:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -58,6 +61,9 @@ capacity:
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 19732.4
+    - datetime: '2025-02-01'
+      source: EIA.gov
+      value: 18988.6
   hydro storage:
     - datetime: '2021-01-01'
       source: EIA.gov
@@ -101,9 +107,10 @@ delays:
   consumption: 30
   consumptionForecast: 30
   production: 48
-disclaimer: This zone includes all wind related electricity production
-  from the generation-only balancing authority Avangrid Renewables, LLC. Read more
-  on the zone definition wiki page.
+disclaimer:
+  This zone includes all wind related electricity production from the generation-only
+  balancing authority Avangrid Renewables, LLC. Read more on the zone definition wiki
+  page.
 emissionFactors:
   direct:
     battery discharge:
