--- a/config/zones/US-NW-CHPD.yaml
+++ b/config/zones/US-NW-CHPD.yaml
@@ -34,6 +34,9 @@ capacity:
     - datetime: '2023-01-01'
       source: EIA.gov
       value: 1601.5
+    - datetime: '2025-01-01'
+      source: EIA.gov
+      value: 1622.2
   hydro storage:
     - datetime: '2021-01-01'
       source: EIA.gov
